tests/NormalTests/paczka1/fuzzy1/69220132.err
Error in line 2: A733 S121 125,7
Error in line 6: qmCfru A85 FF,F
Error in line 21: A733 A367 -3,49
Error in line 25: A733 A733 9,26
Error in line 22: qnv6RsbCN A85 18,4
